// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fetch and render to string with data 1`] = `
Object {
  "unique-key-1": Object {
    "meta": Object {
      "ssr": true,
      "ssrKey": "unique-key-1",
    },
    "state": Object {
      "fulfilled": true,
      "pending": false,
      "reason": null,
      "refreshing": false,
      "rejected": false,
      "value": "foo",
    },
  },
}
`;

exports[`should not fetch data from a nested component 1`] = `
Object {
  "unique-key-1": Object {
    "meta": Object {
      "ssr": true,
      "ssrKey": "unique-key-1",
    },
    "state": Object {
      "counter": 2,
    },
  },
  "unique-key-2": Object {
    "meta": Object {
      "ssr": true,
      "ssrKey": "unique-key-2",
    },
    "state": Object {
      "fulfilled": true,
      "pending": false,
      "reason": null,
      "refreshing": false,
      "rejected": false,
      "value": "2-foo",
    },
  },
}
`;
